@@ -16,7 +16,8 @@
     <properties>
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
-            --add-modules=net.bytebuddy.agent,java.desktopA
+            --add-reads=org.mule.runtime.core.components=java.desktop
+            --add-modules=net.bytebuddy.agent
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=org.mule.runtime.api/org.mule.runtime.api.lifecycle=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.api.processor=ALL-UNNAMED
